# face-alignment-in-3000fps

./: @googleplay  CMakeCache.txt  CMakeLists.txt  Demo.cpp  Demo.out  FaceAlignment.h  Facedetect.cpp  LBF.cpp  LBF.h  LBFRegressor.cpp  LBFRegressor.h  LICENSE  Makefile  README.md  RandomForest.cpp  RandomForest.h  TestDemo.cpp  TestModel.cpp  TrainDemo.cpp  Tree.cpp  Tree.h  Utils.cpp  cmake_install.cmake  facedetect.cpp  objectDetection.cpp
FaceAlignment_vs2012/FaceAlignment/: FaceAlignment.vcxproj  FaceAlignment.vcxproj.filters  LBF.cpp  LBF.h  LBFRegressor.cpp  RandomForest.cpp  Tree.cpp
FaceAlignment_vs2013/: FaceAlignment.opensdf  FaceAlignment.sln
FaceAlignment_vs2013/FaceAlignment/: FaceAlignment.vcxproj  FaceAlignment.vcxproj.filters  Facedetect.cpp  LBF.cpp  LBF.h  LBFRegressor.cpp  LBFRegressor.h  RandomForest.cpp  TrainModel.cpp  Tree.cpp  Utils.cpp  facedetect.cpp
FaceAlignment_vs2013/FaceAlignment/liblinear/: linear.cpp
liblinear/: linear.h
